--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Domov";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Dobrodošli v spletni trgovini z elektroniko!</h1>
+<p>
+    Oglejte si <a href="/Izdelek/Index">našo ponudbo izdelkov</a> ali dodajte izdelke v <a href="/Kosarica/Index">košarico</a>.
+</p>
+@if (Context.Session.GetString("Uporabnik") == null)
+{
+    <p><a class="btn btn-primary" href="/Uporabnik/Prijava">Prijavi se</a></p>
+}
